<resources>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="app_name">SwipeBackDemo</string>
    <string name="action_github">Github</string>
    <string name="start_activity">Start new activity!</string>
    <string name="finish_activity">Finish Activity</string>

    <string name="key_tracking_mode">key_tracking_mode</string>
    <string name="tracking_mode_left">Left</string>
    <string name="tracking_mode_right">Right</string>
    <string name="tracking_mode_bottom">Bottom</string>
    <string name="tracking_mode_all">All</string>

</resources>
